fixed text align for link

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -314,9 +314,8 @@ section p {
 section a {
 	font-family: var(--font-paragraph);
 	font-size: 0.9rem;
-	color:blue
+	color:blue;
     text-align: center;
-
 }
 
 img {
